$Id$

2009-07-21  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* asyncproc.py evtloop.py: Do use threading.Event, the low performance
	is actually caused by thread starvation: insert a sleep(). No change
	on Windows performance.
	* asyncproc.py evtloop.py: Do not use threading.Event and improve
	select emulation performance on linux.
	* netbeans.py: Fix netbeans.remove_bug is a string, not a boolean.
	* gdbmi.py: Fix content of gdbmi results within quotes must be
	unquoted.
	* misc.py: Fix quoted command line arguments are not properly parsed.
	* vim.py: Replace the `vimcmd` environment variable with the
	`EDITOR` environment variable.
	* vim.py gdb.py debugger.py: Jobs and their scheduling time are queued
	in an heap queue, and processed by the dispatch loop.
	* debugger.py gdb.py simple.py: Remove the following methods from the
	netbeans api and the Debugger class: cmd_dbgvar, cmd_delvar,
	cmd_sigint and cmd_symcompletion.
	* buffer.py gdb.py misc.py netbeans.py vim.py: Replace assert with
	exceptions in BufferSet.
	* all files: Clean up the python debugger interface and use pydoc to
	document it.
	* setup.py: The Fedora Core 9 distribution is missing the Python
	standard library test.regrtest module.
	* pyclewn_install.py: Change gdb Windows pathname in shortcut.

===============================================================================
2009-04-04  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* setup.py: Fix test suite does not run with python2.6. Test suite
	is now run through setup.py.
	* misc.py misc_posix.py: Fixed wrong argument in the invocation of
	execvp in ProcessChannel.
	* misc.py gdb.py gdbmi.py: Ignore gdb/mi log stream records.
	* simple.py: The symcompletion and sigint commands assert when run in
	simple.
	* netbeans.py application.py: Print an error message when a pyclewn
	command is issued on a [NoName] buffer. When the command is issued on
	a buffer loaded from Vim command line, prompt the user to allow the