@@ -1,7 +1,9 @@
 $Id$
 
-2009-07-21  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2009-07-25  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* gdb.py: On quitting, do not query some gdb info when no project
+	file is defined.
 	* asyncproc.py evtloop.py: Do use threading.Event, the low performance
 	is actually caused by thread starvation: insert a sleep(). No change
 	on Windows performance.
